tweaks to get wasabi working for post policies
